tests/ui/resolve/resolve-issue-135614.normal.stderr
error[E0658]: `use` associated items of traits is unstable
  --> $DIR/resolve-issue-135614.rs:7:5
   |
LL | use A::b;
   |     ^^^^
   |
   = note: see issue #134691 <https://github.com/rust-lang/rust/issues/134691> for more information
   = help: add `#![feature(import_trait_associated_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
